--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "reg_ex",
+  "name": "verify_email",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm test test.js"
   },
   "author": "",
   "license": "ISC"
